bind with search

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -124,6 +124,12 @@
 	margin-left: 30px;
 }
 
+.top_bar .searchBox {
+	position: absolute;
+	top: 20px;
+	right: 300px;
+}
+
 .top_bar hr {	
     border: 0;
     height: 1px;
