--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -2,6 +2,7 @@
 <div id="left-menu">
 	<input id="page" name="page" value=1 type="hidden">
 	<input id="ipSort" name="sort" value="youtube_views" type="hidden">
+    <input id="ipSearchHd" name="search" type="hidden">
 	
 	<div class="menu_item row">		
 		<div class="row">
