--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,8 +14,18 @@
     <%= render 'video_dialog' %>
 
     <div id="main-content">
-      <div class="top_bar row">
-        <h2 class="titleKpop">K-pop tv</h2>
+      <div class="top_bar row">        
+          <h2 class="titleKpop">K-pop tv</h2>
+
+          <!-- search box -->
+          <div class="searchBox col-md-2">
+            <div class="input-group">
+              <input id="ipSearch" type="text" class="form-control" placeholder="Search...">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Go!</button>
+              </span>
+            </div><!-- /input-group -->
+          </div>
         <hr></hr>
       </div>
 
