create new collection successfully

--- a/app/views/collections/_form.html.erb
+++ b/app/views/collections/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="actions">
+    <div class="field">
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </div>
     <%= f.submit %>
   </div>
 <% end %>
