--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -3,8 +3,12 @@
 <div id="main-container" class="container-fluid">
   <div class="row">
     <div id="sidebar" class="col-xs-3">
+      <%= render 'users/user_widget' %><br>
+      <%= button_to 'my collections', collections_path, :method => :get %>
+      <% if current_user["admin"] %>
+        <%= button_to 'admin', admin_path, :method => :get %>
+      <% end %>
       <%= render 'filter_form' %>
-      <%= render 'users/user_widget' %>
     </div>
 
     <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
