--- a/app/views/main/_video_card.html.erb
+++ b/app/views/main/_video_card.html.erb
@@ -1,5 +1,10 @@
 
 <a href="https://www.youtube.com/embed/{{youtube_id}}" data-toggle="modal" data-target="#basicModal" class="hook--showmodal">
+	<div class="dataWrapper"
+		data-title="{{title_korean}}" data-desc="{{description}}" data-uploaded="{{upload_date}}"
+		data-views="{{youtube_views}}" data-upvotes="{{upvotes}}" data-downvotes="{{downvotes}}"
+		data-approval="{{approval_rating}}" data-hotness="{{hotness}}" data-cheese="{{cheesiness}}">
+	</div>
 	<div class="box panel panel-default">
 		<img src="{{thumbnail}}">		
 		<div class="overlay">
