--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -2,9 +2,12 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+          <div class="row">
+            <div class="titleD"></div>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+          </div>
           <div>
-            <iframe id="iframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
+            <iframe class="iframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
