--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -1,13 +1,25 @@
   <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body container-fluid">
           <div class="row">
             <div class="titleD"></div>
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
           </div>
-          <div>
+          <div class="row">
+            <div class="youtube_user_id col-md-2"></div>
+            <div class="upload_date col-md-2"></div>
+            <div class="views col-md-2"></div>
+            <div class="upvotes col-md-2"></div>
+            <div class="downvotes col-md-2"></div>
+            <div class="approval col-md-2"></div>
+          </div>
+          <div class="row text-center">
             <iframe class="iframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="row">
+            <div class="hotness col-md-4"></div>
+            <div class="cheesiness col-md-4"></div>
           </div>
         </div>
       </div>
