--- a/app/views/main/_video_card.html.erb
+++ b/app/views/main/_video_card.html.erb
@@ -1,7 +1,7 @@
 
 <a href="https://www.youtube.com/embed/{{youtube_id}}" data-toggle="modal" data-target="#basicModal" class="hook--showmodal">
 	<div class="dataWrapper"
-		data-title="{{title_korean}}" data-youtube-userid="{{youtube_user_id}}" data-uploaded="{{upload_date}}"
+		data-title="{{title_korean}}" data-youtube-userid="{{youtube_user_id}}" data-uploaded="{{upload_date}}" data-category="{{category}}"
 		data-views="{{youtube_views}}" data-upvotes="{{upvotes}}" data-downvotes="{{downvotes}}"
 		data-approval="{{approval_rating}}" data-hotness="{{hotness}}" data-cheese="{{cheesiness}}">
 	</div>
