--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -7,7 +7,10 @@
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
           </div>
           <div class="row">
-            <div class="youtube_user_id col-md-2"></div>
+            <div class="col-md-2">
+              <div class="youtube_user_id"></div>
+              <div class="category"></div>
+            </div>
             <div class="upload_date col-md-2"></div>
             <div class="views col-md-2"></div>
             <div class="upvotes col-md-2"></div>
