--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -24,13 +24,20 @@
               <span class="input-group-btn">
                 <button class="btn btn-default" type="button">Go!</button>
               </span>
-            </div><!-- /input-group -->
+            </div><!-- /input-group -->            
           </div>
+
+          <div class="dropdownP col-md-2">                
+            <button class="btnProfile btn dropdown-toggle" type="button" id="btnSort" data-toggle="dropdown" aria-expanded="true"><span class="selection">Profile</span> <span class="caret"></span></button>
+            <ul id="ddProfile" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">           
+              <li role="presentation"><a role="menuitem" value="youtube_views" tabindex="-1" href="#">Profile</a></li>              
+            </ul>          
+          </div>   
         <hr></hr>
       </div>
 
       <div class="header_panel row">
-        <div class="numResults col-md-5">7160 results</div>                
+        <div class="numResults col-md-5"></div>                
         <div class="dropdown col-md-2">                
             <button class="btnSort btn dropdown-toggle" type="button" id="btnSort" data-toggle="dropdown" aria-expanded="true"><span class="selection">SORT</span> <span class="caret"></span></button>
             <ul id="ddSort" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">              
@@ -40,8 +47,7 @@
               <li role="presentation"><a role="menuitem" value="hotness" tabindex="-1" href="#">Hotness</a></li>
               <li role="presentation"><a role="menuitem" value="cheesiness" tabindex="-1" href="#">Cheesiness</a></li>
               <li role="presentation"><a role="menuitem" value="approval_rating" tabindex="-1" href="#">Approval Rating</a></li>
-            </ul>
-          
+            </ul>          
         </div>                
 
         <%= render 'view_menu_box' %>
