fixed admin error

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -5,8 +5,9 @@
     <div id="sidebar" class="col-xs-3">
       <%= render 'users/user_widget' %><br>
       <%= button_to 'my collections', collections_path, :method => :get %>
-      <% if current_user["admin"] %>
+      <% if signed_in? && current_user["admin"] %>
         <%= button_to 'admin', admin_path, :method => :get %>
+
       <% end %>
       <%= render 'filter_form' %>
     </div>
