--- a/app/views/videos/_each_video_handlebar.html.erb
+++ b/app/views/videos/_each_video_handlebar.html.erb
@@ -12,8 +12,8 @@
       </div>
     </a>
     <div class="thumbnail_title popup">
-      <input type="button", value="Like">
-      <input type="button", value="Add">
+      <input type="button" value="Like" class="video-like" data-id="{{id}}">
+      <input type="button" value="Add" class="video-add-collection">
       {{#if editable}} <input name="title_korean" value="{{title_korean}}" class="title_input"> {{else}} {{title_korean}} {{/if}}
     </div>
 
