--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -52,11 +52,13 @@
 
         <%= render 'view_menu_box' %>
       </div>
-      <div id="cards" class="cards transitions-enabled row">
-        <div class="thumbnails">
-        </div>
+      <div class="cardContainer">
+        <div id="cards" class="cards transitions-enabled row">
+          <div class="thumbnails">
+          </div>
 
-        <div id="infinite-scrolling">
+          <div id="infinite-scrolling">
+          </div>
         </div>
       </div>
 
