--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -11,11 +11,12 @@
   </thead>
 
   <tbody>
+  <TR>
+    <Th>Name</Th>
+  </TR>
     <% @collections.each do |collection| %>
       <tr>
-
         <td><%= collection.name %></td>
-        <td><%= collection.user_id %></td>
         <td><%= link_to 'Show', collection %></td>
         <td><%= link_to 'Edit', edit_collection_path(collection) %></td>
         <td><%= link_to 'Destroy', collection, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -27,3 +28,5 @@
 <br>
 
 <%= link_to 'New Collection', new_collection_path %>
+
+<%= link_to 'Home', "/" %>
