--- a/app/views/main/_video_card.html.erb
+++ b/app/views/main/_video_card.html.erb
@@ -7,6 +7,7 @@
 	</div>
 	<div class="box panel panel-default">
 		<img src="{{thumbnail}}">		
+		<div class="titleKr">{{title_korean}}</div>
 		<div class="overlay">
 			<div class="song_title">{{title_korean}}</div>			
 		</div>
