--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div id="sidebar">
       <div class="top_bar row">
-        <h2 class="titleFilter">Filters</h2>
+        <h2 class="titleFilter">KpopTV</h2>
         <hr></hr>
       </div>
 
