--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -6,21 +6,21 @@
             <div class="titleD"></div>
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
           </div>
-          <div class="row">
+          <div class="detail-infos row">
             <div class="col-md-2">
               <div class="youtube_user_id"></div>
               <div class="category"></div>
-            </div>
-            <div class="upload_date col-md-2"></div>
+            </div>            
             <div class="views col-md-2"></div>
             <div class="upvotes col-md-2"></div>
             <div class="downvotes col-md-2"></div>
             <div class="approval col-md-2"></div>
+            <div class="upload_date col-md-2"></div>
           </div>
           <div class="row text-center">
             <iframe class="iframe" width="750" height="425" src="" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="row">
+          <div class="footer-content row">
             <div class="hotness col-md-4"></div>
             <div class="cheesiness col-md-4"></div>
           </div>
