--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,9 +3,8 @@
 <div id="main-container" class="container-fluid">
   <div class="row">
     <div id="sidebar">
-      <div class="top_bar row">
-        <h2 class="titleFilter">KpopTV</h2>
-        <hr></hr>
+      <div class="top_bar">
+        <h2 class="titleFilter">KpopTV</h2>        
       </div>
 
       <%= render 'left_menu' %>
@@ -14,8 +13,7 @@
     <%= render 'video_dialog' %>
 
     <div id="main-content">
-      <div class="top_bar row">        
-          <h2 class="titleKpop">K-pop tv</h2>
+      <div class="top_bar">        
 
           <!-- search box -->
           <div class="searchBox col-md-2">
@@ -32,8 +30,7 @@
             <ul id="ddProfile" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">           
               <li role="presentation"><a role="menuitem" value="youtube_views" tabindex="-1" href="#">Profile</a></li>              
             </ul>          
-          </div>   
-        <hr></hr>
+          </div>           
       </div>
 
       <div class="header_panel row">
