--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -4,6 +4,13 @@
 	<input id="ipSort" name="sort" value="youtube_views" type="hidden">
     <input id="ipSearchHd" name="search" type="hidden">
 	
+
+    <div class="menu_header row">     
+        <div class="row">
+            <div class="col-md-8">Filter</div>
+        </div>
+    </div>
+
 	<div class="menu_item row">		
 		<div class="row">
 			<div class="col-md-8">Artist</div>
