--- a/app/views/main/_video_card.html.erb
+++ b/app/views/main/_video_card.html.erb
@@ -9,7 +9,12 @@
 		<img src="{{thumbnail}}">		
 		<div class="titleKr">{{title_korean}}</div>
 		<div class="overlay">
-			<div class="song_title">{{title_korean}}</div>			
+			<div class="song_title">{{title_korean}}</div>	
+			<div class="buttons row">
+				<div class="btnlike col-md-4">Like</div>
+				<div class="btnAdd col-md-4">Add</div>
+				<div class="btnLater col-md-4">Later</div>
+			</div>		
 		</div>
 	</div>
 </a>
