--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -8,6 +8,7 @@
     <div class="menu_header row">     
         <div class="row">
             <div class="col-md-8">Filter</div>
+            <div class="col-md-2"><span class="caret"></span></div>
         </div>
     </div>
 
@@ -71,7 +72,7 @@
     <div class="menu_item row">
     	<div>Licensed Content</div>
     	<input id="tcLContent" type="checkbox" class="toggle-checkbox" name="licensed_content" data-size="small" data-on-color="info" checked>
-    </div>
+    </div>    
 
     <div class="menu_item row">
     	<div class="row">
