--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -18,7 +18,7 @@
             <div class="upload_date col-md-2"></div>
           </div>
           <div class="row text-center">
-            <iframe class="iframe" width="750" height="425" src="" frameborder="0" allowfullscreen></iframe>
+            <iframe class="iframe" src="" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="footer-content row">
             <div class="hotness col-md-4"></div>
