--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,8 +17,9 @@
 
           <!-- search box -->
           <div class="searchBox col-md-2">
-            <div class="input-group">
+            <div class="input-group">              
               <input id="ipSearch" type="text" class="form-control" placeholder="Search...">
+              <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
               <span class="input-group-btn">
                 <button class="btn btn-default" type="button">Go!</button>
               </span>
