--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -27,6 +27,8 @@
 .menu_item {
 	margin: 20px;	
 	padding-left: 47px;
+	font-size: 22px;
+	color: rgb(199,203,213);
 }
 
 #sidebar .dropdown button{
@@ -103,8 +105,9 @@
 	background: rgb(230,234,248);
 }
 
-.strVar {
-	font-size: 10px;
+.menu_item .strVar {
+	font-size: 11px;
+	color: rgb(101,107,124);
 	margin-top: 12px;
 }
 
@@ -154,6 +157,7 @@
 	border-radius: 15px;	
 	padding-left: 30px;
 	font-size: 22px;
+	background: #ededed;
 	color: rgb(163,167,179);
 }
 
@@ -296,7 +300,7 @@
 .box .overlay .buttons {
 	position: absolute;
 	bottom: 10px;
-	font-size: 18px;
+	font-size: 18px;	
 	color: rgb(255,255,255);
 }
 
