--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -3,7 +3,34 @@
 	<input id="page" name="page" value=1 type="hidden">
 	<input id="ipSort" name="sort" value="youtube_views" type="hidden">
     <input id="ipSearchHd" name="search" type="hidden">
-	
+
+    <div class="menu_header row">     
+        <div class="row">
+            <div class="col-md-8">Discover</div>
+            <div class="col-md-2"><span class="caret"></span></div>
+        </div>
+    </div>	
+
+    <div class="menu_item row">
+        <div class="row">
+            <div class="col-md-8">Daily Top</div>
+        </div>
+    </div>
+    <div class="menu_item row">
+        <div class="row">
+            <div class="col-md-8">Weekly Top</div>
+        </div>
+    </div>
+    <div class="menu_item row">
+        <div class="row">
+            <div class="col-md-8">Random</div>
+        </div>
+    </div>
+    <div class="menu_item row">
+        <div class="row">
+            <div class="col-md-8">Popular</div>
+        </div>
+    </div>
 
     <div class="menu_header row">     
         <div class="row">
@@ -76,7 +103,7 @@
 
     <div class="menu_item row">
     	<div class="row">
-			<div class="col-md-8">Hotness</div><div class="strVar">0 - 10</div>
+			<div class="col-md-8">Sexy Score</div><div class="strVar">0 - 10</div>
 		</div>
     	<input id="ipHN" name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipHN" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="[0,10]"/>
     	<input id="hnMin" name="hotness[min]" type="hidden" value="0">
@@ -85,7 +112,7 @@
 
     <div class="menu_item row">
     	<div class="row">
-			<div class="col-md-8">Cheesiness</div><div class="strVar">0 - 10</div>
+			<div class="col-md-8">Cheesy Score</div><div class="strVar">0 - 10</div>
 		</div>
     	<input id="ipCN" name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipCN" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="[0,10]"/>
     	<input id="cnMin" name="cheesiness[min]" type="hidden" value="0">
@@ -94,7 +121,7 @@
 
     <div class="menu_item row">
     	<div class="row">
-			<div class="col-md-8">English percentage</div><div class="strVar">0 - 100</div>
+			<div class="col-md-8">English Lyrics (%)</div><div class="strVar">0 - 100</div>
 		</div>
     	<input id="ipEP" name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipEP" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
     	<input id="epMin" name="english_percentage[min]" type="hidden" value="0">
