--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -23,6 +23,10 @@
           <div class="footer-content row">
             <div class="hotness col-md-4"></div>
             <div class="cheesiness col-md-4"></div>
+            <div class="buttonBox col-md-4">
+              <button class="btnLike">Like</button>
+              <button class="btnAdd">Add</button>
+            </div>
           </div>
         </div>
       </div>
