--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -43,13 +43,13 @@
         <div class="numResults col-md-5"></div>                
         <div class="dropdown col-md-2">                
             <button class="btnSort btn dropdown-toggle" type="button" id="btnSort" data-toggle="dropdown" aria-expanded="true"><span class="selection">SORT</span> <span class="caret"></span></button>
-            <ul id="ddSort" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">              
-              <li role="presentation"><a role="menuitem" value="youtube_views" tabindex="-1" href="#">Views</a></li>
-              <li role="presentation"><a role="menuitem" value="upvotes" tabindex="-1" href="#">Upvote</a></li>             
-              <li role="presentation"><a role="menuitem" value="upload_date" tabindex="-1" href="#">Recent</a></li> 
-              <li role="presentation"><a role="menuitem" value="hotness" tabindex="-1" href="#">Hotness</a></li>
-              <li role="presentation"><a role="menuitem" value="cheesiness" tabindex="-1" href="#">Cheesiness</a></li>
-              <li role="presentation"><a role="menuitem" value="approval_rating" tabindex="-1" href="#">Approval Rating</a></li>
+            <ul id="ddSort" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">  
+              <li role="presentation"><a role="menuitem" value="hotness" tabindex="-1" href="#">Sexy Score</a></li>
+              <li role="presentation"><a role="menuitem" value="cheesiness" tabindex="-1" href="#">Cheesy Score</a></li>    
+              <li role="presentation"><a role="menuitem" value="approval_rating" tabindex="-1" href="#">Approval Rating</a></li>        
+              <li role="presentation"><a role="menuitem" value="youtube_views" tabindex="-1" href="#">Youtube Views</a></li>
+              <li role="presentation"><a role="menuitem" value="upload_date" tabindex="-1" href="#">Most Recent</a></li>                           
+              <li role="presentation"><a role="menuitem" value="upvotes" tabindex="-1" href="#">Upvote</a></li>                           
             </ul>          
         </div>                
 
