--- a/app/views/main/_video_list.html.erb
+++ b/app/views/main/_video_list.html.erb
@@ -23,8 +23,8 @@
 	        <div class="detailinfos">{{youtube_views}} Views / {{upvotes}} Likes / {{downvotes}} Dislikes / Approval Rating: {{approval_rating}}%</div>	        
         </div>
         <div class="row">
-        	<div class="hotness col-md-5">Sexy Score {{hotness}}</div>
-        	<div class="cheesiness col-md-5">Cheesy Score {{cheesiness}}</div>
+        	<div class="hotness col-md-5">Sexy Score <span class="boxwrapper">{{hotness}}</span></div>
+        	<div class="cheesiness col-md-5">Cheesy Score <span class="boxwrapper">{{cheesiness}}</span></div>
         </div>
     </div>      
 </div>
