--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -199,7 +199,7 @@
 	height: 50px;
 	font-size: 18px;
 	color: rgb(128,128,128);
-	background-color: rgb(237,237,237);
+	background-color: rgb(255,255,255);
 }
 
 .header_panel .dropdown .btnSort .selection {
@@ -345,6 +345,12 @@
 	margin-top: 30px;
 	margin-left: 10px;
 	margin-bottom: 10px;
+}
+
+.vlist .list-info .boxwrapper {
+	padding: 8px;
+	background: rgb(192,192,192);
+	color: rgb(255,255,255);
 }
 
 /* video Modal */
