--- a/app/views/main/_view_menu_box.html.erb
+++ b/app/views/main/_view_menu_box.html.erb
@@ -1,11 +1,14 @@
 <div class="btn-group" role="group" aria-label="...">	
-	<button type="button" class="btnView1 btn btn-default" aria-label="view1">
-	  <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
-	</button>
-	<button type="button" class="btnView2 btn btn-default" aria-label="view2">
+	<%= image_tag "main/view_2_p.png", :class => "btnView1" %>
+	<%= image_tag "main/view_3_n.png", :class => "btnView2" %>
+	<%= image_tag "main/view_list_n.png", :class => "btnView3" %>
+	<!-- <button type="button" class="btnView1 btn" aria-label="view1"> -->
+	  <!-- <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>	   -->
+	<!-- </button> -->
+	<!-- <button type="button" class="btnView2 btn btn-default" aria-label="view2">
 	  <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
 	</button>
 	<button type="button" class="btnView3 btn btn-default" aria-label="view3">
 	  <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-	</button>	
+	</button>	 -->
 </div>
