--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -27,12 +27,13 @@
           </div>
 
           <div class="dropdownP col-md-2">   
-          <% if user_signed_in? %>                     
+          <% if user_signed_in? %>                   
+            <%= image_tag("main/profile_none.png") %>
             <button class="btnProfile btn dropdown-toggle" type="button" id="btnSort" data-toggle="dropdown" aria-expanded="true"><span class="selection">Profile</span> <span class="caret"></span></button>
             <ul id="ddProfile" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">          
               <li role="presentation"><a role="menuitem" value="youtube_views" tabindex="-1" href="#">Profile</a></li>              
             </ul>          
-          <% else %>
+          <% else %>                      
             <%= link_to "Sign in", new_user_session_path, :class => 'login-widget'  %>
             <%= link_to "Sign up", new_user_registration_path, :class => 'login-widget'  %>             
           <% end %>                         
